--- a/spring-mybatis/pom.xml
+++ b/spring-mybatis/pom.xml
@@ -95,8 +95,27 @@
 			<version>2.7.3</version>
 		</dependency>
 		
+		<dependency>
+			<groupId>commons-net</groupId>
+			<artifactId>commons-net</artifactId>
+			<version>3.3</version>
+		</dependency>
 		
-   </dependencies>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.5.1</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20140107</version>
+		</dependency>
+		
+
+		
+	 </dependencies>
    
   <build>
   	 <directory>target</directory><!-- 这是打包的文件的路径。默认是该工程的根目录。 -->
